--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
